--- a/prac.css
+++ b/prac.css
@@ -1,88 +1,89 @@
-*{
-    margin:0;
+* {
+    margin: 0;
     padding: 0;
 }
 
-.con{
+.con {
     position: absolute;
     right: 10px;
-    background-color: purple;
-    width:200px;
-    border:2px solid#000000;
-   /* position: relative; */
+    background-color: green;
+    width: 200px;
+    border: 2px #000000;
+    /* position: relative; */
 }
 
-.box1{
-    background-color: brown;
-    width:100px;
+.box1 {
+    background-color: orange;
+    width: 100px;
     height: 100px;
     border-radius: 50%;
     /* position: absolute; */
     /* right: 10px; */
-   /* top:50px;
+    /* top:50px;
    position: relative; */
 
 }
 
-.box2{
-    background:blue;
-    width:100px;
+.box2 {
+    background: blue;
+    width: 100px;
     height: 100px;
 }
 
-.box3{
-    background-color:yellow;
-    width:100px;
+.box3 {
+    background-color: yellow;
+    width: 100px;
     height: 100px;
-    margin-right:50px;
+    margin-right: 50px;
 }
-.con2{
-    
+
+.con2 {
+
     display: flex;
     flex-direction: row;
     flex-direction: row-reverse;
     justify-content: center;
     overflow-y: auto;
     /*align-items: center;*/
-    background-color: purple;
-    width:500px;
-    height:100vh;
-    border:2px solid#000000;
-   /* position: relative; */
-   
+    background-color: goldenrod;
+    width: 500px;
+    height: 100vh;
+    border: 2px solid#000000;
+    /* position: relative; */
+
 }
 
-.box4{
+.box4 {
     position: fixed;
     top: 10px;
     background-color: brown;
-    width:100px;
+    width: 100px;
     height: 100px;
     display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
-   /* border-radius: 50%;*/
+    /* border-radius: 50%;*/
     /* position: absolute; */
     /* right: 10px; */
-   /* top:50px;
+    /* top:50px;
    position: relative; */
 
 }
 
-.box5{
+.box5 {
     position: sticky;
     top: 10px;
-    background:blue;
-    width:100px;
+    background: blue;
+    width: 100px;
     height: 100px;
 }
 
-.box6{
+.box6 {
     position: sticky;
     top: 10px;
-    background-color:yellow;
-    width:100px;
+    background-color: yellow;
+    width: 100px;
     height: 100px;
-    
+
 }
